--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -8,7 +8,7 @@
       <th>Name</th>
       <th>Birth year</th>
       <th>Homeworld</th>
-      <th>Starships</th>
+      <th>Vehicles</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,7 +19,7 @@
         <td><%= person.name %></td>
         <td><%= person.birth_year %></td>
         <td><%= person.homeworld %></td>
-        <td><%= person.starships %></td>
+        <td><%=  %></td>
         <td><%= link_to 'Show', person %></td>
         <td><%= link_to 'Edit', edit_person_path(person) %></td>
         <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
