Added a beer column to the people table and added a Beer Table so people can have a favorite beer

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :starships %>
-    <%= form.text_field :starships %>
+    <%= form.label :vehicles %>
+    <%= form.text_field :vehicles %>
   </div>
 
   <div class="actions">
