--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -21,10 +21,10 @@
     <%= form.text_field :model %>
   </div>
 
-  <div class="field">
-    <%= form.label :pilots_id %>
-    <%= form.text_field :pilots_id %>
-  </div>
+  <!--<div class="field">
+    <%= form.label :pilots %>
+    <%= form.text_field :people %>
+  </div> -->
 
   <div class="actions">
     <%= form.submit %>
