--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :vehicles %>
   </div>
 
+  <div class="field">
+    <%= form.label :beers %>
+    <%= form.text_field :beers %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
