--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
+<%= render @people %>
+<h1 class="title is-1">People</h1class>
 
-<h1>People</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Birth year</th>
-      <th>Homeworld</th>
-      <th>Vehicles</th>
+      <th class="title is-3">Name</th>
+      <th class="title is-3">Birth year</th>
+      <th class="title is-3">Homeworld</th>
+      <th class="title is-3">Vehicles</th>
+      <th class="title is-3">Favourite Beer</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @people.each do |person| %>
       <tr>
@@ -22,14 +22,13 @@
         <td> <% unless person.vehicles.first.nil? %>
         <%= person.vehicles.count %>
        <% end %></td>
+        <td><%= person.beer.brand %></td>
         <td><%= link_to 'Show', person %></td>
-        <td><%= link_to 'Edit', edit_person_path(person) %></td>
-        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%= link_to 'Edit', edit_person_path(person) %></td>
+        <td><%= link_to 'Destroy', person, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Person', new_person_path %>
+  <h5><%= link_to 'New Person', new_person_path %></h5>
