--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -19,8 +19,8 @@
         <td><%= planet.terrain %></td>
         <td><%= planet.climate %></td>
         <td><%= link_to 'Show', planet %></td>
-        <td><%= link_to 'Edit', edit_planet_path(planet) %></td>
-        <td><%= link_to 'Destroy', planet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       <!-- <td><%= link_to 'Edit', edit_planet_path(planet) %></td>
+        <td><%= link_to 'Destroy', planet, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
