--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<%= render @people %>
-<h1 class="title is-1">People</h1class>
+
+<h5>People</h5>
 
 <table class="table">
   <thead>
