--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Planets</h1>
+<h5>Planets</h5>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Terrain</th>
-      <th>Climate</th>
+      <th class="title is-3">Name</th>
+      <th class="title is-3">Terrain</th>
+      <th class="title is-3">Climate</th>
       <th colspan="3"></th>
     </tr>
   </thead>
