--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Vehicles</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Model</th>
-      <th>Pilots</th>
+      <th class="title is-3">Name</th>
+      <th class="title is-3">Model</th>
+      <th class="title is-3">Pilot</th>
       <th colspan="3"></th>
     </tr>
   </thead>
