--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,10 +2,10 @@
 
 <h1>Beers</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Brand</th>
+      <th class="title is-3">Brand</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,8 +15,8 @@
       <tr>
         <td><%= beer.brand %></td>
         <td><%= link_to 'Show', beer %></td>
-        <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
+        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
