Fixed table sizing on people and some minor styling issues with beer class

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,8 @@
 <p>
   I have chosen to pull data from the star wars api. The data contains information on the character names, vehicles, and planets that I will be using for my project. It is strutted as a collection of json libraries accesses able by api urls. I will also be using Faker to assign each star wars character a favourite beer. They will be randomly assigned to each character.
 </p>
+<br>
+<p>
+  My database ERD:
+</p>
+<%= image_tag("SWDBFinal.png", :alt => "?") %>
