--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,8 +43,10 @@
           </div>
     </nav>
   </header>
+  <%= render partial: 'shared/search' %>
   <section class="section">
     <div class="container">
+
     <%= yield %>
   </body>
 </html>
