Added a simple search functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
           </div>
     </nav>
   </header>
-  <%= render partial: 'shared/search' %>
+  <%= render partial: 'people/search' %>
   <section class="section">
     <div class="container">
 
